// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackNav render the corresponding tag if \`labelComponent\` prop provided 1`] = `
<TestProvider history={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-BackNav-with-router) text="Rugs" url="/rugs/1" labelComponent="h1">
        <inject-BackNav-with-router text="Rugs" url="/rugs/1" labelComponent="h1" classes={{...}}>
          <BackNav text="Rugs" url="/rugs/1" labelComponent="h1" classes={{...}} router={{...}}>
            <WithStyles(Paper) className="RSFBackNav-root-155">
              <Paper className="RSFBackNav-root-155" classes={{...}} component="div" elevation={2} square={false}>
                <div className="MuiPaper-root-161 MuiPaper-elevation2-165 MuiPaper-rounded-162 RSFBackNav-root-155">
                  <WithStyles(Typography) variant="caption">
                    <Typography variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                      <span className="MuiTypography-root-188 MuiTypography-caption-198">
                        <span onClick={[Function: onClick]} className="RSFBackNav-backButtonWrapper-157">
                          <pure(KeyboardArrowLeftIcon)>
                            <KeyboardArrowLeftIcon>
                              <WithStyles(SvgIcon)>
                                <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-223" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
                                    <path fill="none" d="M0 0h24v24H0V0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </KeyboardArrowLeftIcon>
                          </pure(KeyboardArrowLeftIcon)>
                        </span>
                        <h1 className="RSFBackNav-label-156">
                          Rugs
                        </h1>
                      </span>
                    </Typography>
                  </WithStyles(Typography)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </BackNav>
        </inject-BackNav-with-router>
      </WithStyles(inject-BackNav-with-router)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`BackNav renders 1`] = `
<TestProvider history={{...}} app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-BackNav-with-router) text="Rugs" url="/s/1">
        <inject-BackNav-with-router text="Rugs" url="/s/1" classes={{...}}>
          <BackNav text="Rugs" url="/s/1" classes={{...}} router={{...}} labelComponent="span">
            <WithStyles(Paper) className="RSFBackNav-root-1">
              <Paper className="RSFBackNav-root-1" classes={{...}} component="div" elevation={2} square={false}>
                <div className="MuiPaper-root-7 MuiPaper-elevation2-11 MuiPaper-rounded-8 RSFBackNav-root-1">
                  <WithStyles(Typography) variant="caption">
                    <Typography variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                      <span className="MuiTypography-root-34 MuiTypography-caption-44">
                        <span onClick={[Function: onClick]} className="RSFBackNav-backButtonWrapper-3">
                          <pure(KeyboardArrowLeftIcon)>
                            <KeyboardArrowLeftIcon>
                              <WithStyles(SvgIcon)>
                                <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-69" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
                                    <path fill="none" d="M0 0h24v24H0V0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </KeyboardArrowLeftIcon>
                          </pure(KeyboardArrowLeftIcon)>
                        </span>
                        <span className="RSFBackNav-label-2">
                          Rugs
                        </span>
                      </span>
                    </Typography>
                  </WithStyles(Typography)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </BackNav>
        </inject-BackNav-with-router>
      </WithStyles(inject-BackNav-with-router)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`BackNav renders the view type switcher 1`] = `
<TestProvider history={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-BackNav-with-router) text="Furniture" url="/c/1" searchResults={{...}}>
        <inject-BackNav-with-router text="Furniture" url="/c/1" searchResults={{...}} classes={{...}}>
          <BackNav text="Furniture" url="/c/1" searchResults={{...}} classes={{...}} router={{...}} labelComponent="span">
            <WithStyles(Paper) className="RSFBackNav-root-78">
              <Paper className="RSFBackNav-root-78" classes={{...}} component="div" elevation={2} square={false}>
                <div className="MuiPaper-root-84 MuiPaper-elevation2-88 MuiPaper-rounded-85 RSFBackNav-root-78">
                  <WithStyles(Typography) variant="caption">
                    <Typography variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                      <span className="MuiTypography-root-111 MuiTypography-caption-121">
                        <span onClick={[Function: onClick]} className="RSFBackNav-backButtonWrapper-80">
                          <pure(KeyboardArrowLeftIcon)>
                            <KeyboardArrowLeftIcon>
                              <WithStyles(SvgIcon)>
                                <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                  <svg className="MuiSvgIcon-root-146" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                    <path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
                                    <path fill="none" d="M0 0h24v24H0V0z" />
                                  </svg>
                                </SvgIcon>
                              </WithStyles(SvgIcon)>
                            </KeyboardArrowLeftIcon>
                          </pure(KeyboardArrowLeftIcon)>
                        </span>
                        <span className="RSFBackNav-label-79">
                          Furniture
                        </span>
                        <span className="RSFBackNav-switchButtonsWrapper-81">
                          <span className="RSFBackNav-switchButton-82 RSFBackNav-selectedSwitchButton-83">
                            <pure(BorderAllIcon) color="secondary" onClick={[Function: onClick]}>
                              <BorderAllIcon color="secondary" onClick={[Function: onClick]}>
                                <WithStyles(SvgIcon) color="secondary" onClick={[Function: onClick]}>
                                  <SvgIcon color="secondary" onClick={[Function: onClick]} classes={{...}} component="svg" fontSize="default" viewBox="0 0 24 24">
                                    <svg className="MuiSvgIcon-root-146 MuiSvgIcon-colorSecondary-148" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation" onClick={[Function: onClick]}>
                                      <path d="M3 3v18h18V3H3zm8 16H5v-6h6v6zm0-8H5V5h6v6zm8 8h-6v-6h6v6zm0-8h-6V5h6v6z" />
                                      <path fill="none" d="M0 0h24v24H0z" />
                                    </svg>
                                  </SvgIcon>
                                </WithStyles(SvgIcon)>
                              </BorderAllIcon>
                            </pure(BorderAllIcon)>
                          </span>
                          <span className="RSFBackNav-switchButton-82">
                            <pure(ViewAgendaIcon) color="primary" onClick={[Function: onClick]}>
                              <ViewAgendaIcon color="primary" onClick={[Function: onClick]}>
                                <WithStyles(SvgIcon) color="primary" onClick={[Function: onClick]}>
                                  <SvgIcon color="primary" onClick={[Function: onClick]} classes={{...}} component="svg" fontSize="default" viewBox="0 0 24 24">
                                    <svg className="MuiSvgIcon-root-146 MuiSvgIcon-colorPrimary-147" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation" onClick={[Function: onClick]}>
                                      <path fill="none" d="M0 0h24v24H0z" />
                                      <path d="M20 13H3c-.55 0-1 .45-1 1v6c0 .55.45 1 1 1h17c.55 0 1-.45 1-1v-6c0-.55-.45-1-1-1zm0-10H3c-.55 0-1 .45-1 1v6c0 .55.45 1 1 1h17c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z" />
                                    </svg>
                                  </SvgIcon>
                                </WithStyles(SvgIcon)>
                              </ViewAgendaIcon>
                            </pure(ViewAgendaIcon)>
                          </span>
                        </span>
                      </span>
                    </Typography>
                  </WithStyles(Typography)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </BackNav>
        </inject-BackNav-with-router>
      </WithStyles(inject-BackNav-with-router)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
